# nginx

./: .gitignore  CMakeLists.txt
src/nginx/: CMakeLists.txt  myconfigure  test.cpp
src/nginx/module/http/starter_test/: config  starter_test_module.cpp
src/nginx/module_util/: module_util.h
src/nginx/module_util/common/: commons.h
src/nginx/module_util/common/callable/: callable.h
src/nginx/module_util/common/exception/: exception.h
src/nginx/module_util/common/log/: nginx_log.h
src/nginx/module_util/common/time/: date_time.h
src/nginx/module_util/common/value/: unset_value.h
src/nginx/module_util/module_entry/: nginx_module.h
src/nginx/nginx_src/: nginx_src.h
src/nginx/nginx_src/1.16.0/: myconfigure
src/nginx/nginx_src/1.16.0/auto/: make
src/nginx/nginx_src/1.16.0/objs/: autoconf.err
src/nginx/nginx_src/1.16.0/src/core/: nginx.c
src/nginx/nginx_src/1.16.0/src/event/: ngx_event.h
src/nginx/nginx_src/1.16.0/src/http/modules/: ngx_http_degradation_module.c
